docker-kompose/templates/angular-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-kompose.yml -c
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: angular
  name: angular
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: angular
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-kompose.yml -c
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: angular
    spec:
      containers:
      - env:
        - name: ANGULAR_DJANGO_API_ADMIN_URL
          valueFrom:
            configMapKeyRef:
              key: ANGULAR_DJANGO_API_ADMIN_URL
              name: secrets-django-docker-env
        - name: ANGULAR_DJANGO_API_URL
          valueFrom:
            configMapKeyRef:
              key: ANGULAR_DJANGO_API_URL
              name: secrets-django-docker-env
        - name: ANGULAR_DJANGO_AUTH_URL
          valueFrom:
            configMapKeyRef:
              key: ANGULAR_DJANGO_AUTH_URL
              name: secrets-django-docker-env
        - name: ANGULAR_DJANGO_CLIENT_ID
          valueFrom:
            configMapKeyRef:
              key: ANGULAR_DJANGO_CLIENT_ID
              name: secrets-django-docker-env
        - name: ANGULAR_DJANGO_CLIENT_SECRET
          valueFrom:
            configMapKeyRef:
              key: ANGULAR_DJANGO_CLIENT_SECRET
              name: secrets-django-docker-env
        - name: ANGULAR_GOOGLE_CLIENT_ID
          valueFrom:
            configMapKeyRef:
              key: ANGULAR_GOOGLE_CLIENT_ID
              name: secrets-django-docker-env
        - name: ANGULAR_PRODUCTION
          valueFrom:
            configMapKeyRef:
              key: ANGULAR_PRODUCTION
              name: secrets-django-docker-env
        - name: DJANGO_ADMIN_EMAIL
          valueFrom:
            configMapKeyRef:
              key: DJANGO_ADMIN_EMAIL
              name: secrets-django-docker-env
        - name: DJANGO_ADMIN_USERNAME
          valueFrom:
            configMapKeyRef:
              key: DJANGO_ADMIN_USERNAME
              name: secrets-django-docker-env
        - name: DJANGO_SCRAPING_API_URL
          valueFrom:
            configMapKeyRef:
              key: DJANGO_SCRAPING_API_URL
              name: secrets-django-docker-env
        - name: DJANGO_SECRET_KEY
          valueFrom:
            configMapKeyRef:
              key: DJANGO_SECRET_KEY
              name: secrets-django-docker-env
        - name: POSTGRES_DB
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_DB
              name: secrets-django-docker-env
        - name: POSTGRES_HOST
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_HOST
              name: secrets-django-docker-env
        - name: POSTGRES_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_PASSWORD
              name: secrets-django-docker-env
        - name: POSTGRES_PORT
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_PORT
              name: secrets-django-docker-env
        - name: POSTGRES_USER
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_USER
              name: secrets-django-docker-env
        - name: SCRAPYD_URL
          valueFrom:
            configMapKeyRef:
              key: SCRAPYD_URL
              name: secrets-django-docker-env
        - name: SOCIAL_AUTH_GOOGLE_OAUTH2_KEY
          valueFrom:
            configMapKeyRef:
              key: SOCIAL_AUTH_GOOGLE_OAUTH2_KEY
              name: secrets-django-docker-env
        - name: SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET
          valueFrom:
            configMapKeyRef:
              key: SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET
              name: secrets-django-docker-env
        - name: SOLR_URL
          valueFrom:
            configMapKeyRef:
              key: SOLR_URL
              name: secrets-django-docker-env
        image: docker.crosslang.com/ctlg-manager/angular
        imagePullPolicy: ""
        name: angular
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
