docker-kompose/templates/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-kompose.yml -c
    kompose.image-pull-policy: Always
    kompose.image-pull-secret: crosslang
    kompose.service.expose: django.localhost
    kompose.service.expose.tls-secret: django-certificate
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: django
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: django
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-kompose.yml -c
        kompose.image-pull-policy: Always
        kompose.image-pull-secret: crosslang
        kompose.service.expose: django.localhost
        kompose.service.expose.tls-secret: django-certificate
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: django
    spec:
      containers:
      - args:
        - bash
        - -c
        - python manage.py makemigrations && python manage.py migrate && python manage.py
          runserver 0.0.0.0:8000
        image: docker.crosslang.com/ctlg-manager/django
        imagePullPolicy: Always
        name: django
        ports:
        - containerPort: 8000
        resources: {}
      imagePullSecrets:
      - name: crosslang
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
