docker-kompose/templates/scrapyd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-kompose.yml -c
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: scrapyd
  name: scrapyd
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: scrapyd
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-kompose.yml -c
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: scrapyd
    spec:
      containers:
      - args:
        - scrapyd
        image: docker.crosslang.com/ctlg-manager/scrapyd
        imagePullPolicy: ""
        name: scrapyd
        ports:
        - containerPort: 6800
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
