docker-kompose/templates/solr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-kompose.yml -c
    kompose.version: 1.21.0 ()
    kompose.volume.size: 1Gi
  creationTimestamp: null
  labels:
    io.kompose.service: solr
  name: solr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: solr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-kompose.yml -c
        kompose.version: 1.21.0 ()
        kompose.volume.size: 1Gi
      creationTimestamp: null
      labels:
        io.kompose.service: solr
    spec:
      containers:
      - args:
        - solr-precreate
        - documents
        - /opt/solr/server/solr/configsets/myconfig
        image: docker.crosslang.com/ctlg-manager/solr
        imagePullPolicy: ""
        name: solr
        ports:
        - containerPort: 8983
        resources: {}
        volumeMounts:
        - mountPath: /var/solr
          name: solr
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: solr
        persistentVolumeClaim:
          claimName: solr
status: {}
