docker-kompose/templates/angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-kompose.yml -c
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: angular
  name: angular
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 80
  selector:
    io.kompose.service: angular
status:
  loadBalancer: {}
