docker-kompose/templates/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64 -f docker-kompose.yml convert -c
    kompose.image-pull-policy: Always
    kompose.image-pull-secret: crosslang
    kompose.service.expose: django.localhost
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: django
  name: django
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    io.kompose.service: django
status:
  loadBalancer: {}
