docker-kompose/templates/scrapyd-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-kompose.yml -c
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: scrapyd
  name: scrapyd
spec:
  ports:
  - name: "6800"
    port: 6800
    targetPort: 6800
  selector:
    io.kompose.service: scrapyd
status:
  loadBalancer: {}
