docker-kompose/templates/solr-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64 -f docker-kompose.yml convert -c
    kompose.version: 1.19.0 (f63a961c)
    kompose.volume.size: 1Gi
  creationTimestamp: null
  labels:
    io.kompose.service: solr
  name: solr
spec:
  ports:
  - name: "8983"
    port: 8983
    targetPort: 8983
  selector:
    io.kompose.service: solr
status:
  loadBalancer: {}
