docker-kompose/templates/django-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: django
  name: django
spec:
  rules:
  - host: django.localhost
    http:
      paths:
      - backend:
          serviceName: django
          servicePort: 8000
  tls:
  - hosts:
    - django.localhost
    secretName: django-certificate
status:
  loadBalancer: {}
